<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/usernameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/create_username"
                android:padding="10dp"
                android:inputType="text"
                android:autofillHints=""/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:duplicateParentState="false"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />


        <EditText
            android:id="@+id/passwordEt"
            android:layout_marginTop="10dp"
            android:hint="@string/create_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textPassword"
            android:autofillHints="" />
        <Button
            android:id="@+id/SignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/sign_up_su"
            android:textAllCaps="false"
            android:textSize="21sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:id="@+id/LoginTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_su"
            android:textSize="21sp"
            android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>